# engineering-playbooks

./: .gitignore  .release-please-manifest.json  README.md  release-please-config.json
.claude-plugin/: marketplace.json
playbooks/living-docs/: CHANGELOG.md  README.md
playbooks/living-docs/.claude-plugin/: plugin.json
playbooks/living-docs/contracts/: README.md  backend.yaml
playbooks/living-docs/package/: gen_docs.py  pyproject.toml
playbooks/living-docs/package/_gen_docs/: __init__.py  _constants.py  _git.py  _glob.py  _io.py  _manifest.py
playbooks/living-docs/package/_gen_docs/commands/: adapt.py  bootstrap.py  cli.py  init_scaffold.py  lint.py  migrate.py
playbooks/living-docs/package/_gen_docs/generators/: __init__.py  api.py  changelog.py  ci_cd.py  config.py  scripts.py  trees.py
playbooks/living-docs/skills/generate-docs/: SKILL.md
playbooks/living-docs/skills/init-docs/: SKILL.md
playbooks/living-docs/workflow-templates/: README.md  docs-sync.yml  docs-validate.yml
